<resources>
    <string name="app_name">JournalApp</string>
    <string name="title_text">Self. Gratitude. Journal</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="post_title">Title</string>
    <string name="thoughts">Your thoughts</string>
    <string name="save_button">Save</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the \"+\" icon above</string>
    <string name="show_journal_list">Show Journal List</string>
    <string name="share_post_via">Share Journal Entry via:</string>
    <string name="gmail">Gmail</string>
    <string name="facebook">Facebook</string>
    <string name="messenger">Messenger</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook_app_id">Facebook App ID</string>
    <string name="share_journal">Share Journal</string>
    <string name="edit_post">Edit post</string>
    <string name="delete_post">Delete post</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">refresh</string>
    <string name="gina">Gina</string>
    <string name="name">Name</string>
    <string name="date">Date</string>

</resources>
