<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="horizontal"
        android:elevation="10dp"
        android:background="@color/centerwololo"
        android:alpha="0.78"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/journal_row_username"
            android:text="@string/name"
            android:layout_weight="1"
            android:padding="3dp"
            android:textSize="17sp"
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/journal_row_share_button"
            android:contentDescription="@string/share_journal"
            android:src="@android:drawable/ic_menu_share"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/journal_row_edit_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_post"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/journal_row_delete_button"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/delete_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/journal_image_list"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/sea_during_dawn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/journal_title_list"
            android:padding="10dp"
            android:text="Title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/journal_thought_list"
            android:padding="10dp"
            android:text="Thoughts..."
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/journal_timeStamp_list"
            android:padding="5dp"
            android:text="Date created"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.cardview.widget.CardView>