<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity">

    <EditText
        android:id="@+id/edit_description_et"
        android:layout_width="373dp"
        android:layout_height="272dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/thoughts"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title_et" />

    <ImageView
        android:id="@+id/edit_imageView"
        android:layout_width="372dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/sea_during_dawn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/gina"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="@+id/edit_imageView"
        app:layout_constraintTop_toTopOf="@+id/edit_imageView" />

    <TextView
        android:id="@+id/edit_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="Today"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_username_textview"
        app:layout_constraintTop_toBottomOf="@+id/edit_username_textview" />

    <ImageView
        android:id="@+id/editCameraButton"
        android:layout_width="74dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_title_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_imageView"
        app:layout_constraintVertical_bias="0.356"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/edit_title_et"
        android:layout_width="366dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_outline"
        android:textStyle="bold"
        android:ems="10"
        android:hint="@string/post_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_imageView" />

    <ProgressBar
        android:id="@+id/edit_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_description_et" />

    <Button
        android:id="@+id/edit_cancel_journal_button"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/edit_save_journal_button"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:background="@android:color/transparent"
        android:text="@string/save_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>